--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <audio controls autoplay>
-      <source src="quarantine.wav" type="audio/wav" />
+      <source src="quarantine.mp3" type="audio/mp3" />
     </audio>
 
     <div class="img-container">
