--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
     <audio controls autoplay>
@@ -38,5 +39,6 @@
         class="fa fa-youtube fa-5x"
       ></a>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
