--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
-    <audio controls autoplay>
+    <audio autoplay>
       <source src="quarantine.mp3" type="audio/mp3" />
     </audio>
 
