--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <audio autoplay>
-      <source src="quarantine.mp3" type="audio/mp3" />
+      <source src="quarantine.mp3" type="audio/mpeg" />
     </audio>
 
     <div class="img-container">
