--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
-    <audio autoplay>
+    <iframe
+      src="silence.mp3"
+      allow="autoplay"
+      id="audio"
+      style="display: none"
+    ></iframe>
+    <audio autoplay controls>
       <source src="quarantine.mp3" type="audio/mpeg" />
     </audio>
 
     <div class="img-container">
-      <img src="quarantine-a.JPG" />
+      <img src="quarantine-a.png" />
     </div>
 
     <div class="links">
