--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script
+      src="https://fast.wistia.com/embed/medias/p5qce37czr.jsonp"
+      async
+    ></script>
+    <script
+      src="https://fast.wistia.com/assets/external/E-v1.js"
+      async
+    ></script>
+    <script
+      src="https://fast.wistia.com/embed/medias/nk1lf7oow2.jsonp"
+      async
+    ></script>
+    <script
+      src="https://fast.wistia.com/assets/external/E-v1.js"
+      async
+    ></script>
   </head>
   <body>
     <iframe
@@ -23,29 +39,54 @@
     <audio autoplay controls>
       <source src="quarantine.mp3" type="audio/mpeg" />
     </audio>
+    <div class="video-container">
+      <div
+        class="wistia_responsive_padding"
+        style="padding:56.25% 0 0 0;position:relative;"
+      >
+        <div
+          class="wistia_responsive_wrapper"
+          style="height:100%;left:0;position:absolute;top:0;width:100%;"
+        >
+          <div
+            class="wistia_embed wistia_async_nk1lf7oow2 videoFoam=true autoPlay=true"
+            style="height:100%;position:relative;width:100%"
+          >
+            <div
+              class="wistia_swatch"
+              style="height:100%;left:0;opacity:0;overflow:hidden;position:absolute;top:0;transition:opacity 200ms;width:100%;"
+            >
+              <img
+                src="https://fast.wistia.com/embed/medias/nk1lf7oow2/swatch"
+                style="filter:blur(5px);height:100%;object-fit:contain;width:100%;"
+                alt=""
+                aria-hidden="true"
+                onload="this.parentNode.style.opacity=1;"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <div class="img-container">
-      <img src="quarantine-a.png" />
+      <img class="cover" src="quarantine-a.png" />
     </div>
 
     <div class="links">
-      <a
-        href="https://soundcloud.com/game_boy_music/quarantine"
-        class="fa fa-soundcloud fa-5x"
-      ></a>
-      <a
-        href="https://soundcloud.com/game_boy_music/quarantine"
-        class="fa fa-spotify fa-5x"
-      ></a>
-      <a
-        href="https://soundcloud.com/game_boy_music/quarantine"
-        class="fa fa-apple fa-5x"
-      ></a>
-      <a
-        href="https://soundcloud.com/game_boy_music/quarantine"
-        class="fa fa-youtube fa-5x"
-      ></a>
+      <a href="https://soundcloud.com/game_boy_music/quarantine"
+        ><img src="soundcloud-4-64.png"
+      /></a>
+      <a href="https://soundcloud.com/game_boy_music/quarantine"
+        ><img src="spotify-64.png"
+      /></a>
+      <a href="https://soundcloud.com/game_boy_music/quarantine"
+        ><img src="apple-64.png"
+      /></a>
+      <a href="https://soundcloud.com/game_boy_music/quarantine"
+        ><img src="youtube-4-64.png"
+      /></a>
     </div>
-    <script src="index.js"></script>
+    <script src="index.js?n=1"></script>
   </body>
 </html>
